Use jhipster 9.1.0